--- a/arraysSlices/README.org
+++ b/arraysSlices/README.org
@@ -20,3 +20,27 @@ In this program we also use =range= to in our =for= loop logic. =range= lets you
 iterate over an array. On each iteration, =range= returns two values - the index
 and the value. We are choosing to ignore the index value by using =_=
 [[https://go.dev/doc/effective_go#blank][blank identifier]].
+
+[[https://quii.gitbook.io/learn-go-with-tests/go-fundamentals/arrays-and-slices#arrays-and-their-type][Arrays vs Slices]]:
+#+BEGIN_QUOTE
+An interesting property of arrays is that the size is encoded in its type. If
+you try to pass an =[4]int= into a function that expects =[5]int=, it won't
+compile. They are different types so it's just the same as trying to pass a
+=string= into a function that wants an =int=.
+
+You may be thinking it's quite cumbersome that arrays have a fixed length, and
+most of the time you probably won't be using them!
+
+Go has slices which do not encode the size of the collection and instead can
+have any size.
+#+END_QUOTE
+
+Additional documentation on slices: https://go.dev/doc/effective_go#slices.
+
+Go's built-in testing toolkit features a [[https://go.dev/blog/cover][coverage]] tool. Whilst striving for 100%
+coverage should not be your end goal, the coverage tool can help identify areas
+of your code not covered by tests. If you have been strict with TDD, it's quite
+likely you'll have close to 100% coverage anyway.
+
+Also in this program we will use [[https://gobyexample.com/variadic-functions][variadic]] functions. Variadic functions can take
+an arbitrary number of =int=s as arguments.
