worked through the maps chapter

--- a/README.org
+++ b/README.org
@@ -11,3 +11,4 @@ So far I have gone through the following chapters:
 - 4. :: [[./arraysSlices/README.org][Arrays and Slices]]
 - 5. :: [[./structsMethodsInterfaces/README.org][Struct, Methods, and Interfaces]]
 - 6. :: [[./pointers/README.org][Pointers & errors]]
+- 7. :: [[./maps/README.org][Maps]]
