--- a/README.org
+++ b/README.org
@@ -12,3 +12,4 @@ So far I have gone through the following chapters:
 - 5. :: [[./structsMethodsInterfaces/README.org][Struct, Methods, and Interfaces]]
 - 6. :: [[./pointers/README.org][Pointers & errors]]
 - 7. :: [[./maps/README.org][Maps]]
+- 8. :: [[./dependencyInjection/README.org][Dependency Injection]]
