finished dependency injection chapter

--- a/README.org
+++ b/README.org
@@ -13,3 +13,4 @@ So far I have gone through the following chapters:
 - 6. :: [[./pointers/README.org][Pointers & errors]]
 - 7. :: [[./maps/README.org][Maps]]
 - 8. :: [[./dependencyInjection/README.org][Dependency Injection]]
+- 9. :: [[./mocking/README.org][Mocking]]
