--- a/maps/README.org
+++ b/maps/README.org
@@ -1,6 +1,6 @@
 #+TITLE: Maps
 
-This section follows Maps chapter of the [[https://quii.gitbook.io/learn-go-with-tests/go-fundamentals/maps][Learn Go with Tests]].
+This section follows the Maps chapter of the [[https://quii.gitbook.io/learn-go-with-tests/go-fundamentals/maps][Learn Go with Tests]].
 
 Maps allow you to store items in a manner similar to a dictionary. You can think
 of the ~key~ as the word and the ~value~ as the definition. And what better way
