forgot to include README in last commit

--- a/README.org
+++ b/README.org
@@ -15,3 +15,4 @@ So far I have gone through the following chapters:
 - 8. :: [[./dependencyInjection/README.org][Dependency Injection]]
 - 9. :: [[./mocking/README.org][Mocking]]
 - 10. :: [[./concurrency/README.org][Concurrency]]
+- 11. :: [[./select/README.org][Select]]
