finished the reflection chapter

--- a/reflection/README.org
+++ b/reflection/README.org
@@ -56,3 +56,12 @@ From [[https://go.dev/blog/laws-of-reflection][The Go Blog: Reflection]].
    Our function will need to be able to work with lots of different things. As
    always we'll take an iterative approach, writing tests for each new thing we
    want to support and refactoring along the way until we're done.
+
+* Wrapping up
+  - Introduced some concepts from the ~reflect~ package.
+  - Used recursion to traverse arbitrary data structures.
+  - Did an in retrospect bad refactor but didn't get too upset about it. By
+    working iteratively with tests it's not such a big deal.
+  - This only covered a small aspect of reflection.
+    [[https://go.dev/blog/laws-of-reflection][The Go blog has an excellent post covering more details]].
+  - Now that you know about reflection, do your best to avoid using it.
