--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-#+TITLE: Go Playground
+#+TITLE: Go Notes
 
 This repo is just my playground to learn and try to take notes on things I learn
 in Golang. So far I have been following this guide:
