finished the sync chapter

--- a/README.org
+++ b/README.org
@@ -18,3 +18,4 @@ So far I have gone through the following chapters:
 - 11. :: [[./select/README.org][Select]]
 - 12. :: [[./reflection/README.org][Reflection]]
 - 13. :: [[./sync/README.org][Sync]]
+- 14. :: [[./context/README.org][Context]]
