finished the context chapter

--- a/README.org
+++ b/README.org
@@ -19,3 +19,4 @@ So far I have gone through the following chapters:
 - 12. :: [[./reflection/README.org][Reflection]]
 - 13. :: [[./sync/README.org][Sync]]
 - 14. :: [[./context/README.org][Context]]
+- 15. :: [[./propertyTests/README.org][Intro to property based tests]]
