--- a/README.org
+++ b/README.org
@@ -21,3 +21,4 @@ So far I have gone through the following chapters:
 - 14. :: [[./context/README.org][Context]]
 - 15. :: [[./propertyTests/README.org][Intro to property based tests]]
 - 16. :: [[./maths/README.org][Maths]]
+- 17. :: [[./readingFiles/README.org][Reading files]]
